fixed many typos (thanks to Stefan A.H.)

--- a/src/compilation.tex
+++ b/src/compilation.tex
@@ -90,7 +90,7 @@ As a first example, we'll use \texttt{RasmAssemble} function, which returns an e
 #include <stdlib.h>
 #include <string.h>
 
-// Prgram to assemble
+// Program to assemble
 const char* prog="org #9000 \n\
     ld b,10 \n\
 lp: djnz lp \n\
