--- a/src/expressions.tex
+++ b/src/expressions.tex
@@ -24,7 +24,7 @@ Un test de récursivité infini est réalisé à la création de l'alias.
 \end{xfr}
 
 \begin{xen}
-\texttt{EQU} directive allows to define aliases by associating a symbol with a value: any occurence of the symbol will be replaced by the value. An alias cannot be changed once it has been changed, it's a constant value.
+\texttt{EQU} directive allows to define aliases by associating a symbol with a value: any occurrence of the symbol will be replaced by the value. An alias cannot be changed once it has been changed, it's a constant value.
 There is an infinite recursivity check done for each alias declaration.
 \end{xen}
 
