--- a/src/labels.tex
+++ b/src/labels.tex
@@ -137,9 +137,9 @@ A noter que le préfixe utilisé est un underscore: \texttt{module\_label}. Par 
 
 \begin{xen}
 \texttt{MODULE} is a way to declare a section in your code. It is similar to namespace in C, and allows to prefix globals and proximity labels with a name.
-It can be usefull in order to avoid conflict between portions of code using similar labels, for example when including external code.
+It can be useful in order to avoid conflict between portions of code using similar labels, for example when including external code.
 Closing a Module section can be done by declaring a new module, or using \texttt{MODULE OFF}
-In order to prefix a label inside a module, underscore symbol is used : \texttt{module\_label}. For exemple:
+In order to prefix a label inside a module, underscore symbol is used : \texttt{module\_label}. For example:
 \end{xen}
 
 \begin{code}
