--- a/src/loops.tex
+++ b/src/loops.tex
@@ -11,7 +11,7 @@ On peut soit fixer un nombre de répétitions, soit utiliser le mode conditionne
 \end{xfr}
 
 \begin{xen}
-This directive repeats a block of instructions. You may fix a number of repetition or use conditionnal mode with \texttt{UNTIL}. It is also possible to close such a bloc with \texttt{ENDREP} or \texttt{ENDREPEAT}, for Vasm compatibility.
+This directive repeats a block of instructions. You may fix a number of repetition or use conditional mode with \texttt{UNTIL}. It is also possible to close such a block with \texttt{ENDREP} or \texttt{ENDREPEAT}, for Vasm compatibility.
 \end{xen}
 
 \begin{code}
@@ -120,7 +120,7 @@ rend
 
 \subsubsection{WHILE, WEND}\index{WHILE}\index{WEND}\index{WHILE\_COUNTER}
 \begin{verbatim}
-WHILE <condtion> ... wEND
+WHILE <condition> ... wEND
 \end{verbatim}
 
 \begin{xfr}
