--- a/src/struct.tex
+++ b/src/struct.tex
@@ -7,7 +7,7 @@ ENDSTRUCT
 \end{verbatim}
 
 \begin{xen}
-As Z80 processor is able to manage structured data thanks to its IX and IY registers, RASM introduces STRUCT directive, wich is used for defining a structure, in a similar way to C syntax
+As Z80 processor is able to manage structured data thanks to its IX and IY registers, RASM introduces STRUCT directive, which is used for defining a structure, in a similar way to C syntax
 \end{xen}
 
 \begin{code}
@@ -98,7 +98,7 @@ Il est possible d'instancier plusieurs fois la meme structure, comme s'il s'agis
 
 \begin{xen}
 \subsubsection{STRUCT Array}
-It's possible to instanciate an array of structs, using this syntax:
+It's possible to instantiate an array of structs, using this syntax:
 \end{xen}
 
 \begin{code}
