--- a/src/zx.tex
+++ b/src/zx.tex
@@ -65,7 +65,7 @@ A noter qu'il faut obligatoirement ajouter un second parametre à la directive \
 \end{xfr}
 
 \begin{xen}
-Use this directive to enable ZX SNA file generation (Snaphsot) 
+Use this directive to enable ZX SNA file generation (Snapshot) 
 With ZX SNA, you must specify a second parameter to \texttt{RUN} directive, in order to provide the value of Stack Pointer (\texttt{SP}) 
 \end{xen}
 
@@ -82,5 +82,5 @@ L'option \texttt{-sx} permet de réaliser un export pour certaines émulateurs Z
 \end{xfr}
 
 \begin{xen}
-\texttt{-sx} option can be used for exporting symbols for ZX emulators, where the selected bank is output. \texttt{(<bank>:<adresse>)}
+\texttt{-sx} option can be used for exporting symbols for ZX emulators, where the selected bank is output. \texttt{(<bank>:<address>)}
 \end{xen}
