--- a/src/ext_syntaxe.tex
+++ b/src/ext_syntaxe.tex
@@ -95,7 +95,7 @@ Symbol export can be re enabled (fully or partially) with \texttt{ENOEXPORT}.
 \end{xen}
 
 
-\subsection{\xlang{Directives conditionnelles}{Conditionnal code directives}}
+\subsection{\xlang{Directives conditionnelles}{Conditional code directives}}
 
 \begin{xfr}
 RASM supporte un ensemble de directives qui permettent d'influer
@@ -142,7 +142,7 @@ Directive de test et définition de blocs pour le code conditionnel.
 \end{xfr}
 
 \begin{xen}
-As with C preprocesor, this directive can be used for enabling some portions of code, depending on a condition.
+As with C preprocessor, this directive can be used for enabling some portions of code, depending on a condition.
 Example:
 \end{xen}
 
@@ -245,7 +245,7 @@ endswitch
 \subsection{\xlang{Structures de données}{Structures}}
 \input{struct}
 
-\subsection{\xlang{Durée d'un bloc}{Duration of a bloc}}
+\subsection{\xlang{Durée d'un bloc}{Duration of a block}}
 
 
 
@@ -268,10 +268,10 @@ Par exemple, si on veut faire un effet 'raster', il faut il faut s'assurer que l
 \end{xfr}
 
 \begin{xen}
-\texttt{TICKER} directive computes the duration of an instruction bloc (delimited by TICKER START and TICKER STOP),
+\texttt{TICKER} directive computes the duration of an instruction block (delimited by TICKER START and TICKER STOP),
 and stores the result in a variable.
 It can be used for counting cycles for CPC architecture (by using \texttt{TICKER STOP}), or for ZX architectures (by using \texttt{TICKER STOPZX})
-On CPC, the duration is expressed as "number of NOPs", which is approximatively equivalent to micro seconds (see Annexe C).
+On CPC, the duration is expressed as "number of NOPs", which is approximately equivalent to micro seconds (see Annexe C).
 This directive is very convenient when writing video effects, such as rasters, where colors have to be changed periodically, every 64 micro seconds (the duration of a video line):
 \end{xen}
 
