--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -6,9 +6,9 @@ En effet, le projet final pesait plus de 250'000 mots (hors commentaires), 35'00
 Il fallait donc en priorité un assembleur qui soit rapide et lui ajouter au minimum des fonctionnalités que n'ont pas les autres: support natif des cartouches, disquettes ou snapshot Amstrad, espaces mémoires multiples, calculs flottants, compressions les plus courantes intégrées, afin de s'éviter par exemple de fastidieux export/imports de symboles, etc.
 
 \medskip
-C'est ainsi qu'est né RASM. Ce n'était pas mon premier assembleur, j'en avais déja concu un 18 ans auparavant, mais il était trop limité. J'en ai néanmoins repris certains principes, comme l'assemblage en une seule passe. Rasm utilise des concepts éprouvés (arbres de Merkel, nombreux caches, allocations groupées) et surtout une conception linéaire, la récursivité tuant les performances.
+C'est ainsi qu'est né RASM. Ce n'était pas mon premier assembleur, j'en avais déja conçu un 18 ans auparavant, mais il était trop limité. J'en ai néanmoins repris certains principes, comme l'assemblage en une seule passe. Rasm utilise des concepts éprouvés (arbres de Merkel, nombreux caches, allocations groupées) et surtout une conception linéaire, la récursivité tuant les performances.
 
-Résultat: RASM présente des performances d'assemblage très élevées en conditions réelles, il est tres rapide, même sur de gros projets. %, si bien que certaines optimisations n'ont même pas été faites.
+Résultat: RASM présente des performances d'assemblage très élevées en conditions réelles, il est très rapide, même sur de gros projets. %, si bien que certaines optimisations n'ont même pas été faites.
 
 \medskip
 Aujourd'hui Rasm est utilisé dans de nombreux projets d'envergure:
@@ -50,47 +50,47 @@ Nowadays RASM is used on big projects such as:
 
 \begin{xfr}
 \begin{itemize}[noitemsep]
-\item compilation ultra-rapide
-\item export au format binaire, cartouche, disquettes, snapshot...
-\item export/import des symboles
-\item intégration des compresseurs les plus courants
-\item contrôle automatique des zones mémoires contre l'écrasement
-\item possibilité d'utiliser des variables en plus des constantes traditionelles
-\item espaces mémoires illimités où les labels/variables sont partagées
-\item absolument toutes les instructions Z80 sont supportées
-\item macros, code conditionnel, boucles illimités, labels locaux, switch/case
-\item calculs internes en double précision et arrondi correct
-\item compatibilité optionnelle avec Maxam ou AS80
-\item gestion dédiée des ROM et extensions mémoires
-\item importation de fichiers audio, avec conversion en DMA list (CPC+)
-\item calcul de la durée des instructions
+\item Compilation ultra-rapide
+\item Export au format binaire, cartouche, disquettes, snapshot...
+\item Export/import des symboles
+\item Intégration des compresseurs les plus courants
+\item Contrôle automatique des zones mémoires contre l'écrasement
+\item Possibilité d'utiliser des variables en plus des constantes traditionelles
+\item Espaces mémoires illimités où les labels/variables sont partagées
+\item Absolument toutes les instructions Z80 sont supportées
+\item Macros, code conditionnel, boucles illimités, labels locaux, switch/case
+\item Calculs internes en double précision et arrondi correct
+\item Compatibilité optionnelle avec Maxam ou AS80
+\item Gestion dédiée des ROM et extensions mémoires
+\item Importation de fichiers audio, avec conversion en DMA list (CPC+)
+\item Calcul de la durée des instructions
 \end{itemize}
-\medbreak
+\medskip
 Rasm est diffusé sous licence MIT.
-\medbreak
+\medskip
 La présente documentation est maintenue par Stéphane Sikora, merci de faire remonter vos remarques et corrections ici: \texttt{https://github.com/sikorama/rasm-doc} .
 \end{xfr}
 
 \begin{xen}
 \begin{itemize}[noitemsep]
 \item Ultra-fast compilation
-\item common compressors included
-\item binary, snapshot, floppy, cartridge export
-\item symbols import/export
-\item overwriting control
-\item unlimited memory spaces where labels are shared
-\item dedicated directives for memory/ROM management
-\item all Z80 instructions are supported
-\item macros, conditionnal code, unlimited loops, local labels, switch/case
-\item double precision calculation with correct rounding
-\item audio file import, with automatic conversion into DMA lists (CPC+)
-\item optionnal compatibility with Maxam or AS80
-\item code duration evaluation
+\item Common compressors included
+\item Binary, snapshot, floppy, cartridge export
+\item Symbols import/export
+\item Overwriting control
+\item Unlimited memory spaces where labels are shared
+\item Dedicated directives for memory/ROM management
+\item All Z80 instructions are supported
+\item Macros, conditional code, unlimited loops, local labels, switch/case
+\item Double precision calculation with correct rounding
+\item Audio file import, with automatic conversion into DMA lists (CPC+)
+\item Optional compatibility with Maxam or AS80
+\item Code duration evaluation
 \end{itemize}
 
 Rasm is licenced under MIT licence. 
 %(see Annex \ref{licenses} for the complete list of licenses).
-\medbreak
+\medskip
 This documentation is maintained by Stephane Sikora, please send any feedback to \texttt{https://github.com/sikorama/rasm-doc}
 
 \end{xen}
